<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="195dp"
        android:layout_height="105dp"
        android:contentDescription="@string/cin_logo"
        android:src="@drawable/logocin" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:gravity="center"
        android:text="@string/bem_vindo"
        android:textColor="@color/red_dark"
        android:textSize="24sp"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:hint="@string/Email"
        android:backgroundTint="@color/red_dark"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:textColor="@color/red_dark"
        android:textColorHint="@color/red_dark" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red_dark"
        android:ems="10"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:textColor="@color/red_dark"
        android:textColorHint="@color/red_dark" />

    <Button
        android:id="@+id/button"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_margin="8sp"
        android:background="@color/red_dark"
        android:minWidth="250dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>